# SlotPokerMachine

./: CMakeLists.txt  Makefile  README.md  animation.d  build.sh  design.d  fsm.d  images_creator  main.d  myapp  run_app.sh
src/: animation.cpp  animation.hpp  defines.h  design.cpp  design.hpp  fsm.cpp  fsm.hpp  main.cpp
